[gd_scene load_steps=5 format=3 uid="uid://cak05utx7a6gb"]

[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="1_wevyk"]
[ext_resource type="Script" path="res://ui/battle_prep_new/battle_prep.gd" id="2_qwaoi"]

[sub_resource type="Theme" id="Theme_kptq3"]
default_font_size = 48

[sub_resource type="Theme" id="Theme_17gso"]
default_font_size = 28

[node name="BattlePrep" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wevyk")
script = ExtResource("2_qwaoi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BattlePrepHeader" type="PanelContainer" parent="MarginContainer/MainContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainContainer/BattlePrepHeader"]
layout_mode = 2

[node name="HeaderUpperLabel" type="Label" parent="MarginContainer/MainContainer/BattlePrepHeader/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_kptq3")
text = "Prepare For Battle!"
horizontal_alignment = 1

[node name="HeaderLowerLabel" type="Label" parent="MarginContainer/MainContainer/BattlePrepHeader/VBoxContainer"]
modulate = Color(0.509804, 0.509804, 0.509804, 1)
layout_mode = 2
theme = SubResource("Theme_17gso")
horizontal_alignment = 1
